--- a/Lab1-git.ipynb
+++ b/Lab1-git.ipynb
@@ -8,6 +8,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Your branch is up-to-date with 'origin/master'.\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "\n",
+      "\tmodified:   Lab1-babypython.ipynb\n",
+      "\tmodified:   Lab1-git.ipynb\n",
+      "\tmodified:   Lab1-pythonpandas.ipynb\n",
+      "\tmodified:   hw0.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "git@github.com:pbubar/2015lab1.git\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git config remote.origin.url"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2138,7 +2187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
